@@ -24,7 +24,7 @@
 	As the format is simple, a DTD is sufficient, and there's
 	no need for a schema at this point.
 	
-	$Id: spring-beans.dtd,v 1.2 2003-09-03 23:41:24 johnsonr Exp $
+	$Id: spring-beans.dtd,v 1.3 2003-09-06 11:21:38 johnsonr Exp $
 -->
 
 <!-- 
@@ -68,6 +68,39 @@
 	
 -->
 <!ATTLIST bean dependencyCheck (none|objects|simple|all) "none"> 
+
+
+<!--
+	Optional attribute controlling whether to "autowire"
+	bean properties. This is an automagical process in which bean references
+	don't need to be coded explicitly in the XML bean definition file,
+	but Spring works out dependencies.
+	
+	There are three modes:
+	
+	1. no
+	The traditional Spring default. No automagical wiring. Bean references
+	must be defined in the XML file via the <ref> element. We recommend this
+	in most cases as it makes documentation more explicit.
+	
+	2. byName
+	Autowiring by property name. If a bean of class Cat exposes a dog property,
+	Spring will try to set this to the value of the bean "dog" in the current
+	factory.
+	
+	3. byType
+	This is like the PicoContainer default, in which there must be exactly
+	one bean of the property type in the bean factory. If there are 0 or
+	more than one, a fatal error is raised, and you can't use byType autowiring for
+	that bean.
+	This makes bean factories simple to configure for small namespaces,
+	but doesn't work as well as standard Spring behaviour for
+	bigger applications.
+	
+	Autowire behaviour can be combined with dependency checking, which will
+	be performed after all auto wiring has been completed.
+-->
+<!ATTLIST bean autowire (no|byName|byType) "no"> 
 
 
 <!-- 
